# FastAPI-Boilerplate

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
app/: .env.example  .gitignore  main.py  pyproject.toml
app/api/v1/: __init__.py
app/api/v1/auth/: auth_backend.py  routes.py  service.py  view.py
app/api/v1/auth/schemas/: errors.py  exceptions.py  requests.py  responses.py
app/api/v1/register/: routes.py  service.py  view.py
app/api/v1/register/schemas/: requests.py  responses.py
app/api/v1/shared/: role_checker.py
app/api/v1/shared/schemas/: responses.py
app/api/v1/user/: models.py  repository.py  routes.py  service.py  view.py
app/api/v1/user/schemas/: exceptions.py  requests.py  responses.py
app/core/: configs.py  utils.py
app/core/bootstrap/: app.py  handlers.py  listeners.py  middlewares.py  routers.py
app/core/db/: base.py  db.py
app/core/db/migrations/alembic/: env.py
app/core/db/migrations/alembic/versions/: 1a9c6a61f6ae_create_users_table.py  849d9aea7151_create_roles_table.py  d68a3db03614_create_user_roles_table.py
app/core/enums/: exception_status.py  response_status.py  status_type.py
app/core/exceptions/: base.py
app/core/logging/: logger.py  schemas.py
app/core/middlewares/: auth.py  logging.py  request_id.py
app/core/schemas/: base.py
docker/: .env  docker-compose.yaml
docker/conf/python/: Dockerfile
