[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Shohidul <theshohidul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {version = "0.17.6", extras = ["standard"]}
fastapi = {version = "0.80.0", extras = ["all"]}
json-log-formatter = "0.4.0" 
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
databases = {extras = ["aiomysql"], version = "^0.6.1"}
loguru = "^0.6.0"
cryptography = "^38.0.1"
bcrypt = "^4.0.0"
PyJWT = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.15"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]