[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Shohidul <theshohidul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = {extras = ["all"], version = "^0.89.1"}
json-log-formatter = "^0.5.1"
alembic = "^1.9.2"
databases = {extras = ["aiomysql"], version = "^0.7.0"}
loguru = "^0.6.0"
cryptography = "^38.0.1"
bcrypt = "^4.0.0"
sqlalchemy = "^1.4.46"
pyjwt = "^2.6.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.15"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]